--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,10 @@
-version: "3.2"
+version: "3.3"
 
 services:
-  back-end:  
-
-  front-end:
+  back-end:
+    build: ./back-end
+    restart: on-failure
+    ports:
+      - 80:8000
+    stdin_open: true
+    tty: true
