--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,22 @@
 version: "3.3"
 
 services:
-  app:
+  app-back:
+    container_name: web-app-backend
     build: ./back-end
     restart: on-failure
     ports:
-      - 80:8000
+      - 8989:8989
     volumes:
       - .m2:/root/.m2
+    stdin_open: true
+    tty: true
+
+  app-front:
+    container_name: web-app-frontend
+    build: ./front-end
+    restart: on-failure
+    ports:
+      - 3000:3000
     stdin_open: true
     tty: true
