🚀 Add conf file and fix net issue

--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@ yarn-error.log*
 **/!gradle/wrapper/gradle-wrapper.jar
 **/!**/src/main/**/build/
 **/!**/src/test/**/build/
+**/target/
 
 ### STS ###
 **/.apt_generated
